[package]
name = "token-price"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
actix-web-actors = "4.2"
actix = "0.13"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
futures = "0.3"